tests/baselines/reference/restParametersOfNonArrayTypes2.errors.txt
==== tests/cases/compiler/restParametersOfNonArrayTypes2.ts (28 errors) ====
    // Rest parameters must be an array type if they have a type annotation, 
    // user defined subtypes of array do not count, all of these are errors
    
    interface MyThing extends Array<any> { }
    interface MyThing2<T> extends Array<T> { }
    
    function foo(...x: MyThing) { }
                 ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    var f = function foo(...x: MyThing) { }
                         ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    var f2 = (...x: MyThing, ...y: MyThing) => { }
              ~~~~~~~~~~~~~
!!! error TS1014: Rest parameter must be last in list.
                             ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    
    class C {
        foo(...x: MyThing) { }
            ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }
    
    interface I {
        (...x: MyThing);
         ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        foo(...x: MyThing, ...y: MyThing);
            ~~~~~~~~~~~~~
!!! error TS1014: Rest parameter must be last in list.
                           ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }
    
    var a: {
        (...x: MyThing);
         ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        foo(...x: MyThing);
            ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }
    
    var b = {
        foo(...x: MyThing) { },
            ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        a: function foo(...x: MyThing, ...y: MyThing) { },
                        ~~~~~~~~~~~~~
!!! error TS1014: Rest parameter must be last in list.
                                       ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        b: (...x: MyThing) => { }
            ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }
    
    
    
    
    function foo2(...x: MyThing2<string>) { }
                  ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    var f3 = function foo(...x: MyThing2<string>) { }
                          ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    var f4 = (...x: MyThing2<string>, ...y: MyThing2<string>) => { }
              ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1014: Rest parameter must be last in list.
                                      ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    
    class C2 {
        foo(...x: MyThing2<string>) { }
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }
    
    interface I2 {
        (...x: MyThing2<string>);
         ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        foo(...x: MyThing2<string>, ...y: MyThing2<string>);
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1014: Rest parameter must be last in list.
                                    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }
    
    var a2: {
        (...x: MyThing2<string>);
         ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        foo(...x: MyThing2<string>);
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }
    
    var b2 = {
        foo(...x: MyThing2<string>) { },
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        a: function foo(...x: MyThing2<string>, ...y: MyThing2<string>) { },
                        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1014: Rest parameter must be last in list.
                                                ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        b: (...x: MyThing2<string>) => { }
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }